[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = sf3dmodels
description = 3D Modelling package of Star Forming regions
long_description = SF3dmodels is a star forming region(s) modelling package that brings together analytical models in order to compute their physical properties in a 3D grid. The package can couple different models in a single grid to recreate complex star forming systems as those being revealed by current instruments. The output data can be read with LIME or RADMC-3D to carry out radiative transfer calculations.
#SF3dmodels is a star-forming-region(s) modelling package that brings together analytical pmodels in order to compute physical properties in a 3D grid. The package can couple different models in a single grid to recreate complex star forming systems as those being revealed by current telescopes and interferometersrs. The output data is compatible with LIME or RADMC-3D in order to perform radiative transfer calculations.
author = Andres Izquierdo
author_email = andres.izquierdo.c@gmail.com
license = BSD 3-Clause
url = http://astropy.org
edit_on_github = True
github_project = andizq/star-forming-regions
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.0.dev0
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 2.7

[entry_points]

astropy-package-template-example = packagename.example_mod:main

